// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen for the Ivy runtime (commandLibrary: ivy) > matches the golden output for a path, a command, a wait and a deadline parallel 1`] = `
"/** GENERATED by zenith from autos/sample.auto.json (sha deadbeef). Do not edit; edit the file. */

package org.example.teamcode.opmode.Auto;

import com.pedropathing.api.Paths;
import com.pedropathing.ivy.Command;
import com.pedropathing.ivy.commands.Commands;
import com.pedropathing.math.Pose;
import com.pedropathing.paths.Path;

import org.horizon36596.zenith.Args;
import org.horizon36596.zenith.ivy.AutoFromFile;
import org.horizon36596.zenith.ivy.Branch;
import org.horizon36596.zenith.ivy.NamedCommands;
import org.horizon36596.zenith.ivy.Parallel;
import org.horizon36596.zenith.ivy.PathMarkers;
import org.horizon36596.zenith.ivy.RobotTimeout;
import org.horizon36596.zenith.ivy.Sequence;
import org.horizon36596.zenith.ivy.WaitRobotTime;

/**
 * GENERATED by zenith from autos/sample.auto.json (sha deadbeef). Do not edit; edit the file.
 *
 * Reads as the plan: one private method per step, called in file order from buildRoutine().
 * Abstract, and never referenced by an {@code @Autonomous} OpMode; {@code zenith deploy} writes the
 * class that actually runs on the robot.
 */
public abstract class SampleGenerated extends AutoFromFile {

    @Override
    protected Pose startPose() {
        return alliance(pose(-40.0, -60.0, 1.5708));
    }

    @Override
    protected Command buildRoutine() {
        return new Sequence(
            step("toShoot", stepToShootWithTimeout()),
            step("volley", stepVolleyWithTimeout()),
            step("settle", stepSettle()),
            step("park", stepPark())
        );
    }

    private static Pose pose(double xIn, double yIn, double headingRad) {
        return new Pose(xIn, yIn, headingRad);
    }

    private Command stepToShoot() {
        Path seg0 = Paths.line(alliance(pose(-40.0, -60.0, 1.5708)) /* ref: start */, alliance(pose(-30.0, -40.0, 0.0)) /* ref: shoot */).reverseTangent();
        Path path = seg0;
        Command drive = followPath(path, 0.8);
        drive = Parallel.race(drive, Commands.waitUntil(NamedCommands.condition("hopperFull")));
        double[] segmentLengthsIn = { 22.3607 };
        java.util.List<PathMarkers.Marker> markers = new java.util.ArrayList<PathMarkers.Marker>();
        markers.add(new PathMarkers.Marker(13.4164, NamedCommands.build("setIntake", Args.of("state", "IN"), this)));
        return PathMarkers.wrap(drive, segmentLengthsIn, markers, this);
    }

    private Command stepToShootWithTimeout() {
        return RobotTimeout.of(stepToShoot(), 3.0, this);
    }

    private Command stepVolley() {
        return NamedCommands.build("shootAll", Args.of("count", 3.0), this);
    }

    private Command stepVolleyWithTimeout() {
        return RobotTimeout.of(stepVolley(), 4.0, this);
    }

    private Command stepSettle() {
        return new WaitRobotTime(500, this);
    }

    private Command stepDrive() {
        Path seg0 = Paths.line(alliance(pose(-30.0, -40.0, 0.0)) /* ref: shoot */, alliance(pose(-40.0, -60.0, 1.5708)) /* ref: start */).tangent();
        Path path = seg0;
        Command drive = followPath(path, defaultSpeedFraction());
        return drive;
    }

    private Command stepIdle() {
        return NamedCommands.build("setIntake", Args.of("state", "OFF"), this);
    }

    private Command stepPark() {
        java.util.List<Command> members = new java.util.ArrayList<Command>();
        Command m_drive = stepDrive();
        Command member_drive = step("drive", m_drive);
        members.add(member_drive);
        Command m_idle = stepIdle();
        Command member_idle = step("idle", m_idle);
        members.add(member_idle);
        Command deadline = member_drive;
        members.remove(deadline);
        return Parallel.deadline(deadline, members.toArray(new Command[0]));
    }
}
"
`;

exports[`codegen for the starter's first-auto > matches the golden output 1`] = `
"/** GENERATED by zenith from autos/first-auto.auto.json (sha deadbeef). Do not edit; edit the file. */

package org.firstinspires.ftc.teamcode.zenith;

import com.pedropathing.api.Paths;
import com.pedropathing.paths.Path;
import com.seattlesolvers.solverslib.command.Command;
import com.seattlesolvers.solverslib.command.ConditionalCommand;
import com.seattlesolvers.solverslib.command.InstantCommand;
import com.seattlesolvers.solverslib.command.SequentialCommandGroup;
import com.seattlesolvers.solverslib.command.WaitUntilCommand;
import com.seattlesolvers.solverslib.geometry.Pose2d;
import com.seattlesolvers.solverslib.geometry.Rotation2d;

import org.horizon36596.zenith.Args;
import org.horizon36596.zenith.solverslib.AutoFromFile;
import org.horizon36596.zenith.solverslib.DeferredPath;
import org.horizon36596.zenith.solverslib.NamedCommands;
import org.horizon36596.zenith.solverslib.Parallel;
import org.horizon36596.zenith.solverslib.PathMarkers;
import org.horizon36596.zenith.solverslib.Poses;
import org.horizon36596.zenith.solverslib.RobotTimeout;
import org.horizon36596.zenith.solverslib.WaitRobotTime;

/**
 * GENERATED by zenith from autos/first-auto.auto.json (sha deadbeef). Do not edit; edit the file.
 *
 * Reads as the plan: one private method per step, called in file order from buildRoutine().
 * Abstract, and never referenced by an {@code @Autonomous} OpMode; {@code zenith deploy} writes the
 * class that actually runs on the robot.
 */
public abstract class FirstAutoGenerated extends AutoFromFile {

    @Override
    protected Pose2d startPose() {
        return alliance(pose(-12.0, -63.0, 1.5708));
    }

    @Override
    protected Command buildRoutine() {
        return new SequentialCommandGroup(
            step("driveOut", stepDriveOut()),
            step("scorePreload", stepScorePreload()),
            step("park", stepPark())
        );
    }

    private static Pose2d pose(double xIn, double yIn, double headingRad) {
        return new Pose2d(xIn, yIn, new Rotation2d(headingRad));
    }

    private Command stepDriveOut() {
        Path seg0 = Paths.line(Poses.toPedro(alliance(pose(-12.0, -63.0, 1.5708)) /* ref: start */), Poses.toPedro(alliance(pose(-12.0, -36.0, 1.5708)) /* ref: scoreSouth */)).tangent();
        Path path = seg0;
        Command drive = followPath(path, defaultSpeedFraction());
        return drive;
    }

    private Command stepScorePreload() {
        return NamedCommands.build("score", Args.of("count", 4.0), this);
    }

    private Command stepPark() {
        // Starts from "current": built when the step starts, from where the robot is then.
        return DeferredPath.of("park", this, from -> stepParkFrom(from));
    }

    private Command stepParkFrom(Pose2d from) {
        Path seg0 = Paths.line(Poses.toPedro(from), Poses.toPedro(alliance(pose(-40.0, -36.0, 3.1416)) /* ref: park */)).tangent();
        Path path = seg0;
        Command drive = followPath(path, defaultSpeedFraction());
        return drive;
    }
}
"
`;

exports[`generateAutoJava > matches the golden output for a path, a command, a wait and a deadline parallel 1`] = `
"/** GENERATED by zenith from autos/sample.auto.json (sha deadbeef). Do not edit; edit the file. */

package org.example.teamcode.opmode.Auto;

import com.pedropathing.api.Paths;
import com.pedropathing.paths.Path;
import com.seattlesolvers.solverslib.command.Command;
import com.seattlesolvers.solverslib.command.ConditionalCommand;
import com.seattlesolvers.solverslib.command.InstantCommand;
import com.seattlesolvers.solverslib.command.SequentialCommandGroup;
import com.seattlesolvers.solverslib.command.WaitUntilCommand;
import com.seattlesolvers.solverslib.geometry.Pose2d;
import com.seattlesolvers.solverslib.geometry.Rotation2d;

import org.horizon36596.zenith.Args;
import org.horizon36596.zenith.solverslib.AutoFromFile;
import org.horizon36596.zenith.solverslib.NamedCommands;
import org.horizon36596.zenith.solverslib.Parallel;
import org.horizon36596.zenith.solverslib.PathMarkers;
import org.horizon36596.zenith.solverslib.Poses;
import org.horizon36596.zenith.solverslib.RobotTimeout;
import org.horizon36596.zenith.solverslib.WaitRobotTime;

/**
 * GENERATED by zenith from autos/sample.auto.json (sha deadbeef). Do not edit; edit the file.
 *
 * Reads as the plan: one private method per step, called in file order from buildRoutine().
 * Abstract, and never referenced by an {@code @Autonomous} OpMode; {@code zenith deploy} writes the
 * class that actually runs on the robot.
 */
public abstract class SampleGenerated extends AutoFromFile {

    @Override
    protected Pose2d startPose() {
        return alliance(pose(-40.0, -60.0, 1.5708));
    }

    @Override
    protected Command buildRoutine() {
        return new SequentialCommandGroup(
            step("toShoot", stepToShootWithTimeout()),
            step("volley", stepVolleyWithTimeout()),
            step("settle", stepSettle()),
            step("park", stepPark())
        );
    }

    private static Pose2d pose(double xIn, double yIn, double headingRad) {
        return new Pose2d(xIn, yIn, new Rotation2d(headingRad));
    }

    private Command stepToShoot() {
        Path seg0 = Paths.line(Poses.toPedro(alliance(pose(-40.0, -60.0, 1.5708)) /* ref: start */), Poses.toPedro(alliance(pose(-30.0, -40.0, 0.0)) /* ref: shoot */)).reverseTangent();
        Path path = seg0;
        Command drive = followPath(path, 0.8);
        drive = Parallel.race(drive, new WaitUntilCommand(NamedCommands.condition("hopperFull")));
        double[] segmentLengthsIn = { 22.3607 };
        java.util.List<PathMarkers.Marker> markers = new java.util.ArrayList<PathMarkers.Marker>();
        markers.add(new PathMarkers.Marker(13.4164, NamedCommands.build("setIntake", Args.of("state", "IN"), this)));
        return PathMarkers.wrap(drive, segmentLengthsIn, markers, this);
    }

    private Command stepToShootWithTimeout() {
        return RobotTimeout.of(stepToShoot(), 3.0, this);
    }

    private Command stepVolley() {
        return NamedCommands.build("shootAll", Args.of("count", 3.0), this);
    }

    private Command stepVolleyWithTimeout() {
        return RobotTimeout.of(stepVolley(), 4.0, this);
    }

    private Command stepSettle() {
        return new WaitRobotTime(500, this);
    }

    private Command stepDrive() {
        Path seg0 = Paths.line(Poses.toPedro(alliance(pose(-30.0, -40.0, 0.0)) /* ref: shoot */), Poses.toPedro(alliance(pose(-40.0, -60.0, 1.5708)) /* ref: start */)).tangent();
        Path path = seg0;
        Command drive = followPath(path, defaultSpeedFraction());
        return drive;
    }

    private Command stepIdle() {
        return NamedCommands.build("setIntake", Args.of("state", "OFF"), this);
    }

    private Command stepPark() {
        java.util.List<Command> members = new java.util.ArrayList<Command>();
        Command m_drive = stepDrive();
        Command member_drive = step("drive", m_drive);
        members.add(member_drive);
        Command m_idle = stepIdle();
        Command member_idle = step("idle", m_idle);
        members.add(member_idle);
        Command deadline = member_drive;
        members.remove(deadline);
        return Parallel.deadline(deadline, members.toArray(new Command[0]));
    }
}
"
`;
